--- a/src/index.css
+++ b/src/index.css
@@ -1,53 +1,52 @@
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
 @font-face {
-  font-family: "Montserrat";
+  font-family: 'Montserrat';
   font-weight: 400;
   font-style: normal;
   src:
-    local("Trickster"),
-    url("./assets/fonts/Montserrat-Regular.ttf") format("truetype");
+    local('Trickster'),
+    url('./assets/fonts/Montserrat-Regular.ttf') format('truetype');
 }
 
 @font-face {
-  font-family: "Montserrat";
+  font-family: 'Montserrat';
   font-weight: 600;
-   font-style: normal;
+  font-style: normal;
   src:
-    local("Trickster"),
-    url("./assets/fonts/Montserrat-SemiBold.ttf") format("truetype");
+    local('Trickster'),
+    url('./assets/fonts/Montserrat-SemiBold.ttf') format('truetype');
 }
 
 @font-face {
-  font-family: "Montserrat";
+  font-family: 'Montserrat';
   font-style: normal;
   font-weight: 700;
   src:
-    local("Trickster"),
-    url("./assets/fonts/Montserrat-Bold.ttf") format("truetype");
+    local('Trickster'),
+    url('./assets/fonts/Montserrat-Bold.ttf') format('truetype');
 }
 
 @font-face {
-  font-family: "Montserrat";
+  font-family: 'Montserrat';
   font-weight: 300;
   font-style: normal;
   src:
-    local("Trickster"),
-    url("./assets/fonts/Montserrat-Light.ttf") format("truetype");
+    local('Trickster'),
+    url('./assets/fonts/Montserrat-Light.ttf') format('truetype');
 }
 
 @font-face {
-  font-family: "Montserrat";
+  font-family: 'Montserrat';
   font-weight: 100;
   font-style: normal;
   src:
-    local("Trickster"),
-    url("./assets/fonts/Montserrat-Thin.ttf") format("truetype");
-}
-
-*{
-    font-family: "Montserrat" , "sans-serif";
+    local('Trickster'),
+    url('./assets/fonts/Montserrat-Thin.ttf') format('truetype');
 }
 
 body {
-    background-color: #EDEDED;
-    color: #4D2612
-}
+  @apply bg-background;
+} 
